--- a/clase1.ipynb
+++ b/clase1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "ebd1314d",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "7b8d6f15",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "6ce68672",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "'C'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,11 +347,519 @@
    "source": [
     "list_strings[2]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c35350a4",
+   "metadata": {},
+   "source": [
+    "## Operadores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2d9ebf86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "y = 3\n",
+    "\n",
+    "z = x + y  # Salida: z = 8\n",
+    "print(z)\n",
+    "\n",
+    "z = x * y  # Salida: z = 15\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5f6c07a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado de la suma es 8\n",
+      "El resultado del producto 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "y = 3\n",
+    "\n",
+    "z = x + y  # Salida: z = 8\n",
+    "print(f\"El resultado de la suma es {z}\")\n",
+    "\n",
+    "z = x * y  # Salida: z = 15\n",
+    "print(f\"El resultado del producto {z}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3626ca5b",
+   "metadata": {},
+   "source": [
+    "Operadores logicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "94714acd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "da7365a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1032ab98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "efa3f453",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not not True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "263c17dc",
+   "metadata": {},
+   "source": [
+    "## Estructura de decision \n",
+    "\n",
+    "Si \n",
+    "if \"REGLA\":\n",
+    "     Se coloca la instruccion/operacion que hara la maquina\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a4f7608b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eres mayor de edad.\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = 45\n",
+    "if edad >= 18:\n",
+    "    print(\"Eres mayor de edad.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5264819d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edad >= 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d094cc25",
+   "metadata": {},
+   "source": [
+    "Sino , complemente si\n",
+    "\n",
+    "si (condicion):\n",
+    "\n",
+    "    Lo que haga el programa\n",
+    "en caso contrario\n",
+    "   \n",
+    "   lo que deba hacer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c6f7f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eres mayor de edad.\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = 45\n",
+    "if edad >= 18:\n",
+    "    print(\"Eres mayor de edad.\")\n",
+    "else:\n",
+    "    print(\"No eres mayor de edad.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "6f8f575a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No eres mayor de edad.\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = 12\n",
+    "if edad >= 18:\n",
+    "    print(\"Eres mayor de edad.\")\n",
+    "else:\n",
+    "    print(\"No eres mayor de edad.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d56bbe4",
+   "metadata": {},
+   "source": [
+    "elif es una extensión del if"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d9d16a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = [1,2,3,4,5,6,7,8,9,10]\n",
+    "X\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "ab5c709e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "46401dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c0ba60ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20%2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "60ebb99d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero no es divisible por 3 y su resto es 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "if X[0] % 3 == 0:\n",
+    "    print(\"El numero es divisible por 3 y su resto es 0\")\n",
+    "elif X[0] % 3 == 1:\n",
+    "    print(\"El numero no es divisible por 3 y su resto es 1\")\n",
+    "else:\n",
+    "    print(\"el numero no es divisible por 3 y su resto es 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "92a87365",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero es divisible por 3 y su resto es 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "j = 5\n",
+    "\n",
+    "if X[j] % 3 == 0:\n",
+    "    print(\"El numero es divisible por 3 y su resto es 0\")\n",
+    "elif X[j] % 3 == 1:\n",
+    "    print(\"El numero no es divisible por 3 y su resto es 1\")\n",
+    "else:\n",
+    "    print(\"el numero no es divisible por 3 y su resto es 2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "675ffdba",
+   "metadata": {},
+   "source": [
+    "### Estructuras de repeticion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "944cf21f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "3cb87a84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "manzana\n",
+      "banana\n",
+      "cereza\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"manzana\", \"banana\", \"cereza\"]\n",
+    "\n",
+    "for x in frutas:\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "5b1b9781",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f04de483",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 2 (3549500777.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[76]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(f\"El numero {j} es divisible por 3 y su resto es 0\")\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'if' statement on line 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tratar de modificar la estructura para que funcione y diga si los elementos de X son divisible por 3\n",
+    "\n",
+    "for j in X:\n",
+    "    if j % 3 == 0:\n",
+    "    print(f\"El numero {j} es divisible por 3 y su resto es 0\")\n",
+    "    elif j % 3 == 1:\n",
+    "    print(f\"El numero {j} no es divisible por 3 y su resto es 1\")\n",
+    "    else:\n",
+    "    print(f\"el numero {j} no es divisible por 3 y su resto es 2\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
