--- a/clase1.ipynb
+++ b/clase1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "ebd1314d",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "7b8d6f15",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "a7b8c947",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "639a5e26",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "bee2799d",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "58b3be90",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "3aab5ce0",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "90b88e45",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "1b097bda",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "88ecaf90",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "340bb4cc",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "ecd97485",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "3a29221f",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "39ceaf7c",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "71a5d9a7",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "397a4dce",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "'A'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "d5840ec2",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "6ce68672",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "'C'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "2d9ebf86",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "5f6c07a2",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "94714acd",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "False"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "da7365a0",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "1032ab98",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "efa3f453",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "True"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "a4f7608b",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "5264819d",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6c6f7f78",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "id": "6f8f575a",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8d9d16a2",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "id": "ab5c709e",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "10"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "id": "46401dde",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
        "10.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "id": "c0ba60ff",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "id": "60ebb99d",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "id": "92a87365",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "id": "944cf21f",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 38,
    "id": "3cb87a84",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 39,
    "id": "5b1b9781",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,16 +831,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f04de483",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 2 (3549500777.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[76]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(f\"El numero {j} es divisible por 3 y su resto es 0\")\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'if' statement on line 2\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 1 no es divisible por 3 y su resto es 1\n",
+      "El número 2 no es divisible por 3 y su resto es 2\n",
+      "El número 3 es divisible por 3 y su resto es 0\n",
+      "El número 4 no es divisible por 3 y su resto es 1\n",
+      "El número 5 no es divisible por 3 y su resto es 2\n",
+      "El número 6 es divisible por 3 y su resto es 0\n",
+      "El número 7 no es divisible por 3 y su resto es 1\n",
+      "El número 8 no es divisible por 3 y su resto es 2\n",
+      "El número 9 es divisible por 3 y su resto es 0\n",
+      "El número 10 no es divisible por 3 y su resto es 1\n"
      ]
     }
    ],
@@ -849,17 +857,160 @@
     "\n",
     "for j in X:\n",
     "    if j % 3 == 0:\n",
-    "    print(f\"El numero {j} es divisible por 3 y su resto es 0\")\n",
+    "        print(f\"El número {j} es divisible por 3 y su resto es 0\")\n",
     "    elif j % 3 == 1:\n",
-    "    print(f\"El numero {j} no es divisible por 3 y su resto es 1\")\n",
+    "        print(f\"El número {j} no es divisible por 3 y su resto es 1\")\n",
     "    else:\n",
-    "    print(f\"el numero {j} no es divisible por 3 y su resto es 2\")"
+    "        print(f\"El número {j} no es divisible por 3 y su resto es 2\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe922230",
+   "metadata": {},
+   "source": [
+    "### Mientras\n",
+    "\n",
+    "\n",
+    "Mientras \n",
+    "\n",
+    "while (condicion):\n",
+    "\n",
+    "    Lo que haga el programa\n",
+    "\n",
+    "   \n",
+    "   condicion auxiliar (condicion)\n",
+    "         \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a66d9cb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c93382ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "48d6822c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "f1500e41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j = 4 \n",
+    "X[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "13d35ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 1 no es divisible por 3 y su resto es 1\n",
+      "El número 2 no es divisible por 3 y su resto es 2\n",
+      "El número 3 es divisible por 3 y su resto es 0\n",
+      "El número 4 no es divisible por 3 y su resto es 1\n",
+      "El número 5 no es divisible por 3 y su resto es 2\n",
+      "El número 6 es divisible por 3 y su resto es 0\n",
+      "El número 7 no es divisible por 3 y su resto es 1\n",
+      "El número 8 no es divisible por 3 y su resto es 2\n",
+      "El número 9 es divisible por 3 y su resto es 0\n",
+      "El número 10 no es divisible por 3 y su resto es 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "i = 0\n",
+    "\n",
+    "while i < len(X):\n",
+    "    j = X[i]\n",
+    "    if j % 3 == 0:\n",
+    "        print(f\"El número {j} es divisible por 3 y su resto es 0\")\n",
+    "    elif j % 3 == 1:\n",
+    "        print(f\"El número {j} no es divisible por 3 y su resto es 1\")\n",
+    "    else:\n",
+    "        print(f\"El número {j} no es divisible por 3 y su resto es 2\")\n",
+    "    i += 1\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
