Si quiero los cambios

--- a/clase1.ipynb
+++ b/clase1.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "8d9d16a2",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "ab5c709e",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "10"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "46401dde",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
        "10.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "c0ba60ff",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "60ebb99d",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "92a87365",
    "metadata": {},
    "outputs": [
@@ -755,6 +755,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "623f272f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[j]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "675ffdba",
    "metadata": {},
@@ -764,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "944cf21f",
    "metadata": {},
    "outputs": [
@@ -787,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "3cb87a84",
    "metadata": {},
    "outputs": [
@@ -810,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "5b1b9781",
    "metadata": {},
    "outputs": [
@@ -820,7 +841,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "f04de483",
    "metadata": {},
    "outputs": [
@@ -885,8 +906,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8e31a5b",
+   "metadata": {},
+   "source": [
+    "### longitud o tamaño de una lista \n",
+    "'len' permite saber la cantidad de elementos de una lista\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
+   "id": "a775b566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "a66d9cb9",
    "metadata": {},
    "outputs": [
@@ -896,19 +947,27 @@
        "10"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(X)"
+    "len(X) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8ee66f1",
+   "metadata": {},
+   "source": [
+    "la instrccion 'type' permite identificar el tipo de objeto que estamos trabajando "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "c93382ea",
+   "execution_count": 36,
+   "id": "15b3157b",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +976,7 @@
        "list"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,29 +987,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "48d6822c",
+   "execution_count": 37,
+   "id": "078b7fda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1 = (1,2,3,4,5,6,7,8,9,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2902499e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "tuple"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X[6]"
+    "type(X1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "f1500e41",
+   "execution_count": 39,
+   "id": "45f1e48d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f404d355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2 = {\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\",\"10\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8c636fd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7abd02f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f891d79e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "48d6822c",
    "metadata": {},
    "outputs": [
     {
@@ -959,19 +1122,226 @@
        "5"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "j = 4 \n",
+    "X[4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c91a6a19",
+   "metadata": {},
+   "source": [
+    "Cada vez que se coloca X[j] estamos indicandole al programa que me muestre el elementos de X esta en la posicion j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f1500e41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j = 3 \n",
     "X[j]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
+   "id": "e5c3b246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4289afa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "08f63412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1', '10', '2', '3', '4', '5', '6', '7', '8', '9'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8366a8ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[49]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mX2\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "X2[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d1cf1d4",
+   "metadata": {},
+   "source": [
+    "Tarea investigar como llamar a un elemento de un conjunto en python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "92990a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "contador = 0\n",
+    "\n",
+    "while contador < 5:\n",
+    "    print(contador)\n",
+    "    contador = contador + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "1def0ea4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "contador = 0\n",
+    "\n",
+    "while contador < 5:\n",
+    "    print(contador)\n",
+    "    contador += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3ddea486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 1 no es divisible por 3 y su resto es 1\n",
+      "El número 2 no es divisible por 3 y su resto es 2\n",
+      "El número 3 es divisible por 3 y su resto es 0\n",
+      "El número 4 no es divisible por 3 y su resto es 1\n",
+      "El número 5 no es divisible por 3 y su resto es 2\n",
+      "El número 6 es divisible por 3 y su resto es 0\n",
+      "El número 7 no es divisible por 3 y su resto es 1\n",
+      "El número 8 no es divisible por 3 y su resto es 2\n",
+      "El número 9 es divisible por 3 y su resto es 0\n",
+      "El número 10 no es divisible por 3 y su resto es 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in X:\n",
+    "    if j % 3 == 0:\n",
+    "        print(f\"El número {j} es divisible por 3 y su resto es 0\")\n",
+    "    elif j % 3 == 1:\n",
+    "        print(f\"El número {j} no es divisible por 3 y su resto es 1\")\n",
+    "    else:\n",
+    "        print(f\"El número {j} no es divisible por 3 y su resto es 2\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "13d35ad4",
    "metadata": {},
    "outputs": [
@@ -993,9 +1363,9 @@
     }
    ],
    "source": [
-    "X = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "i = 0\n",
+    "# X = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
+    "i = 0\n",
     "while i < len(X):\n",
     "    j = X[i]\n",
     "    if j % 3 == 0:\n",
@@ -1004,7 +1374,66 @@
     "        print(f\"El número {j} no es divisible por 3 y su resto es 1\")\n",
     "    else:\n",
     "        print(f\"El número {j} no es divisible por 3 y su resto es 2\")\n",
-    "    i += 1\n"
+    "    i += 1  # i = i + 1\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "6ec21a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "continuar = True\n",
+    "suma = 0\n",
+    "\n",
+    "while continuar == True:\n",
+    "    suma = suma + 5\n",
+    "    print(suma)\n",
+    "    if suma == 45:\n",
+    "        continuar = False "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "95469ddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "continuar = True\n",
+    "suma = 0\n",
+    "\n",
+    "while continuar == True:\n",
+    "    suma = suma + 5\n",
+    "    if suma == 45:\n",
+    "        continuar = False \n",
+    "        print(suma)"
    ]
   }
  ],
